<resources>
    <string name="app_name" translatable="false">MoviesDB</string>
    <string name="hello" translatable="false">Hello world!</string>

    <string name="back_text">Back</string>
    <string name="rating_movie" translatable="false">13+</string>
    <string name="name_movie" translatable="false">Avengers: End Game</string>
    <string name="name_movie_for_list" translatable="false">Avengers: End Game</string>
    <string name="tag_movie" translatable="false">Action, Adventure, Fantasy</string>
    <string name="background_movie" translatable="false">background</string>
    <string name="review_movie" translatable="false">125 REVIEWS</string>
    <string name="release_date_string" translatable="false">Release date: 2020-12-03</string>
    <string name="countries_string" translatable="false">Countries: Japan, England, United States of America</string>
    <string name="reviews">REVIEWS</string>
    <string name="release_date">Release date:</string>
    <string name="countries">Country:</string>
    <string name="storyline_movie">Storyline</string>
    <string name="description_detail_movie" translatable="false">
        After the devastating events of Avengers: Infinity War,
        the universe is in ruins. With the help of remaining allies,
        the Avengers assemble once more in order to reverse Thanos\'
        actions and restore balance to the universe.
    </string>
    <string name="cast_movie">Cast</string>
    <string name="robert_downey_jr" translatable="false">Robert Downey Jr.</string>
    <string name="chris_evans" translatable="false">Chris Evans</string>
    <string name="mark_ruffalo" translatable="false">Mark Ruffalo</string>
    <string name="chris_hemsworth" translatable="false">Chris Hemsworth</string>
    <string name="image_text" translatable="false">image</string>
    <string name="next_button" translatable="false">Next</string>
    <string name="image_view" translatable="false">image view</string>
    <string name="movies_list" translatable="false">Movies list</string>
    <string name="_137_min" translatable="false">137 MIN</string>
    <string name="min">MIN</string>

    <string name="no_internet_dialog_tag" translatable="false">noInternetConnectionDialog</string>
    <string name="attention_no_internet">Attention!</string>
    <string name="check_internet_connection_restart">No Internet connection! \nCheck the connection and restart the APP</string>
    <string name="check_internet_connection">No Internet connection! \nCheck the connection</string>


</resources>