<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark_blue">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatarMovieImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/background_movie"
                android:foreground="@drawable/gradient_mask"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="375:298"
                android:src="@drawable/orig"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_margin_16"
                android:layout_marginTop="@dimen/app_margin_top_62"
                android:background="@drawable/bg_movie_rating"
                android:gravity="center"
                android:padding="@dimen/app_padding_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/pathBackView"
                    android:layout_width="@dimen/width_path_back_view"
                    android:layout_height="@dimen/height_path_back_view"
                    android:contentDescription="@string/back_text"
                    android:src="@drawable/path" />

                <TextView
                    android:id="@+id/back_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/app_margin_4"
                    android:text="@string/back_text"
                    android:textColor="@color/gray" />

            </LinearLayout>

            <TextView
                android:id="@+id/ageCategoryMovieView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_margin_16"
                android:layout_marginTop="@dimen/app_margin_top_226"
                android:background="@drawable/bg_movie_rating"
                android:padding="@dimen/app_padding_4"
                android:text="@string/rating_movie"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameMovieView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_margin_16"
                android:layout_marginTop="@dimen/app_margin_top_254"
                android:layout_marginEnd="@dimen/app_margin_16"
                android:text="@string/name_movie"
                android:textColor="@color/white"
                android:textSize="@dimen/app_default_text_40"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tagMovieView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_margin_16"
                android:layout_marginTop="@dimen/app_margin_4"
                android:layout_marginEnd="@dimen/app_margin_16"
                android:text="@string/tag_movie"
                android:textColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameMovieView" />

            <RatingBar
                android:id="@+id/ratingBarOfMovie"
                style="@style/Theme.Movies.RatingBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_margin_16"
                android:layout_marginTop="@dimen/app_margin_10"
                android:foregroundGravity="center"
                android:numStars="5"
                android:rating="2"
                android:stepSize="1"
                android:theme="@style/Theme.Movies.RatingBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tagMovieView" />

            <TextView
                android:id="@+id/reviewsMovieView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_margin_8"
                android:layout_marginTop="@dimen/app_margin_8"
                android:text="@string/review_movie"
                android:textColor="@color/gray"
                app:layout_constraintStart_toEndOf="@id/ratingBarOfMovie"
                app:layout_constraintTop_toBottomOf="@id/tagMovieView" />

            <TextView
                android:id="@+id/storyLineMovieView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_margin_16"
                android:layout_marginTop="@dimen/app_margin_24"
                android:layout_marginEnd="@dimen/app_margin_16"
                android:text="@string/storyline_movie"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviewsMovieView" />

            <TextView
                android:id="@+id/descriptionMovieView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_margin_16"
                android:layout_marginTop="@dimen/app_margin_4"
                android:layout_marginEnd="@dimen/app_margin_16"
                android:paddingTop="@dimen/app_padding_8"
                android:paddingBottom="@dimen/app_padding_8"
                android:text="@string/description_detail_movie"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toTopOf="@id/castMovieView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyLineMovieView" />

            <TextView
                android:id="@+id/castMovieView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_margin_16"
                android:layout_marginTop="@dimen/app_margin_16"
                android:layout_marginEnd="@dimen/app_margin_16"
                android:text="@string/cast_movie"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/movieListDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionMovieView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movieListDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/app_margin_16"
                android:paddingEnd="@dimen/app_padding_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/castMovieView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>